# funes

./: .gitignore  README.md  UI_README.md  app.py  pyproject.toml  run_ui.py  stop.sh
funes/: agent.py
memchat/: __init__.py  cli.py  orchestrator.py  tools.py  tui.py
tests/: __init__.py  test_tools.py
tests/fixtures/memory/: project-info.md  sample.txt
